# CertificAtor

./: LICENSE  README.rst  pyproject.toml  requirements.txt
src/certificator/: __main__.py  app.py
src/certificator.dist-info/: METADATA
src/certificator/resources/: certificator.icns
